@@ -72,7 +72,7 @@ class DefaultErrorHandler implements ErrorHandler {
         for (int i=0; i < details.length; i++) {
             if (details[i].getJspBeginLineNumber() >= 0) {
                 args = new Object[] {
-                        new Integer(details[i].getJspBeginLineNumber()), 
+                        Integer.valueOf(details[i].getJspBeginLineNumber()), 
                         details[i].getJspFileName() };
                 buf.append("\n\n");
                 buf.append(Localizer.getMessage("jsp.error.single.line.number",
@@ -83,7 +83,7 @@ class DefaultErrorHandler implements ErrorHandler {
                 buf.append(details[i].getJspExtract());
             } else {
                 args = new Object[] {
-                        new Integer(details[i].getJavaLineNumber()) };
+                        Integer.valueOf(details[i].getJavaLineNumber()) };
                 buf.append("\n\n");
                 buf.append(Localizer.getMessage("jsp.error.java.line.number",
                         args));
